# course-project-sirMatras-

./: .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .trivyignore  Dockerfile  PR_DESCRIPTION.md  PR_DESCRIPTION_P07.md  PR_DESCRIPTION_P08.md  PR_DESCRIPTION_P09.md  PR_DESCRIPTION_P10.md  PR_DESCRIPTION_P11.md  PR_DESCRIPTION_P12.md  PR_DESCRIPTION_RU.md  README.md  SECURITY.md  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci-cd.yml  ci-p11-dast.yml  ci-p11-sast.yml  ci-p12-iac-container.yml  ci-sast-secrets.yml  ci.yml  sbom-sca.yml
EVIDENCE/P09/: README.md  sbom.json  sca_report.json  sca_summary.md
EVIDENCE/P10/: README.md  sast_summary.md
EVIDENCE/P11/: README.md  bandit_report.json  sast_summary.md  semgrep_report.json
EVIDENCE/P12/: README.md  hardening_summary.md
app/: main.py
docs/adr/: ADR-001-errors-rfc7807.md  ADR-002-rate-limiting-login.md  ADR-003-secrets-management.md
docs/p04-threat-model/: DFD.md  RISKS.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  STRIDE.md
policy/: waivers.yml
scripts/: deploy_staging.sh  run.sh  test_container.sh
security/: .gitleaks.toml  checkov.yaml  hadolint.yaml  trivy.yaml
security/semgrep/: rules.yml
src/app/: main.py  security.py  settings.py
src/domain/: exceptions.py  schemas.py
tests/: conftest.py  test_auth.py  test_auth_and_crud.py  test_errors.py  test_exercises.py  test_rate_limit.py  test_rfc7807.py  test_stats.py  test_workouts.py
(+13 files in other folders)
