[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]
ignore = []
exclude = ["venv", ".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=html --cov-report=xml"

[project]
name = "workout-log-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.0.0",
  "passlib[argon2]>=1.7.4",
  "python-dotenv>=1.0.0",
  "python-jose==3.3.0",
  "SQLAlchemy==2.0.35",
  "httpx==0.27.2",
]
